# speechtext

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: context.mdc
speechtext/: __init__.py  app.py
speechtext/audio/: __init__.py  recorder.py
speechtext/output/: __init__.py  text_output.py
speechtext/transcription/: __init__.py  speech_to_text.py
