[project]
name = "speechtext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "rich>=13.9.4",
    "ruff>=0.11.2",
]
